# event-horizon

./: .dockerignore  .gitignore  CLAUDE.md  README.md  THESIS.md  deploy.sh  docker-compose.yml  project.md
api/: .env.example  Dockerfile  crontab  init_models.py  pyproject.toml  release.sh  requirements-dev.txt  requirements.txt  ruff.toml
api/accounts/: admin.py  models.py
api/api/: serializers.py  urls.py
api/api/views/: articles.py  events.py  forecasts.py  newsletter.py
api/app/: __init__.py  celery.py  urls.py  views.py
api/core/: admin.py  admin_dashboard.py  apps.py  models.py
api/core/fixtures/: additional_sources.json  initial_rss_sources.json
api/core/management/: base.py
api/core/utils/: crontab_schedule.py
api/migrations/accounts/: 0001_initial.py  0002_group_session.py
api/migrations/auth/: 0001_initial.py
api/migrations/contenttypes/: 0001_initial.py
api/migrations/core/: 0001_initial.py  0002_align_category_choices.py  0002_forecast_realized_direction_idx.py  0003_article_llm_usage_event_llm_usage.py  0003_delete_forecast.py  0003_remove_telegram_source_type.py  0004_article_process_queued_at.py  0004_forecast_v2.py  0004_pipeline_redesign.py  0005_article_title_embedding.py  0006_source_sitemap_url.py  0007_source_sitemap_url_data.py  0008_taskrun_queued_status_result_tracking.py  0009_source_last_fetched_at.py  0010_event_affected_indicators_symbol_index.py  0011_repair_broken_rss_sources.py  0012_article_published_on_idx_event_intensity_idx.py  0013_article_geo_failed_event_is_routed.py  0014_repair_broken_rss_sources_jul2026.py  0015_article_annotation_deferred.py  0016_runtimeconfig.py  0017_event_topics_source_idx.py  0018_cleanup_article_pipeline_state.py  0019_remove_article_geo_failed.py  0020_article_stage_refined_on.py  0021_article_refined_by.py  0022_alter_article_options_alter_article_managers_and_more.py  0023_article_annotator_version.py  0024_taskrun_job_id_idx_article_id_plain_idx.py
api/migrations/newsletter/: 0001_initial.py
api/misc/: models.py
api/newsletter/: tasks.py
api/scripts/: eval_pipeline_live.py  goldset_eval.py  init_models.py
api/services/: cache.py  llm.py  market_symbols.py  proxy_pool.py  queue.py  runtime_config.py  scoring.py  stages.py  task_registry.py  tasks.py  tests_scoring.py  text_utils.py  utils.py  workflow.py
api/services/data/: __init__.py  base.py  bodies.py  historical.py  proxy.py  rss.py  wayback.py  wikipedia.py
api/services/forecasting/: __init__.py  backtest.py  buckets.py  calibration.py  evaluate.py  features.py  history.py  metrics.py  model.py  routing.py  service.py  tests_forecast.py  tests_leakage.py
api/services/llm/: __init__.py  discovery.py
api/services/newsletter/: __init__.py  generator.py
api/services/processing/: _lazy.py  analyzer.py  ner.py  (+8 more)
api/settings/: base.py  model_names.py
api/tests/: tests_annotator.py  tests_cache.py  tests_forecast.py  tests_forecast_evaluate.py  tests_forecasting_routing.py  tests_historical.py  tests_llm_providers.py  tests_notam.py  tests_processing.py  tests_queue.py  tests_refiner.py  tests_scoring.py  tests_stages.py  tests_topics_matcher.py  tests_utils.py  tests_wayback_history.py  tests_wikipedia_history.py
(+112 files in other folders)
